--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,58 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<title>Nicholas Hancox — Software Engineer</title>
+    <title>Nicholas Hancox — Software Engineer</title>
 
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/home.css">
-	<script type="module" src="../js/main.js"></script>
-</head>
+    <link rel="stylesheet" type="text/css" href="../css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/home.css" />
+    <script type="module" src="../js/main.js"></script>
+  </head>
 
-<body>
-	<main>
-		<img
-			class="headshot"
-			height="500px"
-			src="../../static/nicholas.jpg"
-			width="500px"
-		/>
+  <body>
+    <main>
+      <img
+        class="headshot"
+        height="500px"
+        src="../../static/nicholas.jpg"
+        width="500px"
+      />
 
-		<h1 class="name">Nicholas Hancox</h1>
-		<h2 class="title">Software Engineer</h2>
+      <h1 class="name">Nicholas Hancox</h1>
+      <h2 class="title">Software Engineer</h2>
 
-		<a
-			href="https://www.linkedin.com/in/nhancox"
-			class="icon-link"
-		>
-			<i class="fab fa-linkedin-in fa-2x"></i>
-		</a>
-		<!-- (TODO) Off center because the previous element still exists -->
-		<noscript>
-			<a href="https://www.linkedin.com/in/nhancox">LinkedIn</a>
-		</noscript>
+      <a href="https://www.linkedin.com/in/nhancox" class="icon-link">
+        <i class="fab fa-linkedin-in fa-2x"></i>
+      </a>
+      <!-- (TODO) Off center because the previous element still exists -->
+      <noscript>
+        <a href="https://www.linkedin.com/in/nhancox">LinkedIn</a>
+      </noscript>
 
-		<a
-			href="https://github.com/nhancox"
-			class="icon-link"
-		>
-			<i class="fab fa-github fa-2x"></i>
-		</a>
-		<noscript>
-			<a href="https://github.com/nhancox">GitHub</a>
-		</noscript>
-	</main>
+      <a href="https://github.com/nhancox" class="icon-link">
+        <i class="fab fa-github fa-2x"></i>
+      </a>
+      <noscript>
+        <a href="https://github.com/nhancox">GitHub</a>
+      </noscript>
+    </main>
 
-	<footer>
-		<p>
-			Source code available on
-			<a href="https://github.com/nhancox/nicholashancox.com">
-				GitHub
-			</a>
-		</p>
-	</footer>
-</body>
+    <footer>
+      <p>
+        Source code available on
+        <a href="https://github.com/nhancox/nicholashancox.com">
+          GitHub
+        </a>
+      </p>
+    </footer>
+  </body>
 </html>
