Switch from Yarn to npm and Parcel to custom build
Switched to npm to better integrate with nhancox/javascript-boilerplate.
With the Yarn 2 changes and npm's acquisition, seems like the safer bet.

Parcel produces random errors in the console when deployed. Ran into
several annoying features like refusing to keep license text in
processed files (stated that it will wait until sometime in next major
release). Didn't want to deal with it any more.

--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -4,10 +4,10 @@ block title
   title Nicholas Hancox | 404
 
 block append stylesheets
-  link(href="../css/404.css", rel="stylesheet")
+  link(href="css/404.css", rel="stylesheet")
 
 block content
   main
     h1 404
     p The page you were trying to navigate to doesn't exist.
-    a(href="/home") Home
+    a(href="/home.html") Home
