--- a/src/views/animate-objects-calculator.pug
+++ b/src/views/animate-objects-calculator.pug
@@ -4,10 +4,10 @@ block title
   title Animate Objects Calculator
 
 block append stylesheets
-  link(href="../css/animate-objects-calculator.css", rel="stylesheet")
+  link(href="css/animate-objects-calculator.css", rel="stylesheet")
 
 block append scripts
-  script(src="../js/animateObjectsCalculator.js", type="module")
+  script(src="js/animateObjectsCalculator.js", type="module")
 
 block content
   main
