--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,15 +1,11 @@
 extends templates/layout.pug
 
 block append stylesheets
-  link(href="../css/home.css", rel="stylesheet")
+  link(href="css/home.css", rel="stylesheet")
 
 block content
   main
-    img.headshot(
-      height="500px",
-      src="../../static/nicholas.jpg",
-      width="500px"
-    )
+    img.headshot(height="500px", src="nicholas.jpg", width="500px")
 
     h1.name Nicholas Hancox
     h2.title Software Engineer
