--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,7 @@
-@import "../../node_modules/normalize.css/normalize.css";
-
-/*
+/*!
   Uses sakura-dark as an initial base.
   See https://github.com/oxalorg/sakura
+  MIT License, (c) 2016 Mitesh Shah
 */
 
 :root {
