--- a/src/views/templates/layout.pug
+++ b/src/views/templates/layout.pug
@@ -8,10 +8,11 @@ html
       title Nicholas Hancox — Software Engineer
 
     block stylesheets
-      link(href="../css/main.css", rel="stylesheet")
+      link(href="css/normalize.css", rel="stylesheet")
+      link(href="css/main.css", rel="stylesheet")
 
     block scripts
-      script(src="../js/main.js", type="module")
+      script(src="js/main.js", type="module")
 
   body
     block content
